--- a/FrontEnd/login.html
+++ b/FrontEnd/login.html
@@ -8,11 +8,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Syne:wght@700;800&family=Work+Sans&display=swap" rel="stylesheet">
 	<meta name="description" content="">
-	<link rel="stylesheet" href="./assets/login.css">
+	<link rel="stylesheet" href="./assets/login.css"> 
 </head>
 
 <body>
-    <script src="login.js"></script>
     <header>
         <h1>Sophie Bluel <span>Architecte d'intérieur</span></h1>
         <nav>
@@ -24,7 +23,7 @@
                     <li>contact</li>
                 </a>
                 <a href="index.html">
-                    <li class="js-alredy-logged">login</li>
+                    <li class="js-alredy-logged">Acceuil</li>
                 </a>
                 <a href="https://www.instagram.com" target="_blank">
                     <li><img src="./assets/icons/instagram.png" alt="Instagram"></li>
@@ -37,7 +36,7 @@
         <section class="login">
             <h2>Log In</h2>
             <p></p>
-            <form>
+            <form action="#" method="post">
                 <label for="email">E-mail</label>
                 <input type="password" id="email">
                 <label for="password">Mot de passe</label>
@@ -54,6 +53,6 @@
                 <li>Mentions Légales</li>
             </ul>
         </nav>
-    </footer>
-    
+    </footer> 
+    <script src="login.js"></script>
 </body>
