Rectification pour soutenance

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -27,7 +27,9 @@
 		<p><i class="fa-solid fa-xmark"></i></p>
 		<h3>Galerie photo</h3>
 		<div class="galerie"></div>
-		<button>Ajouter une photo</button>
+		<div class="line">
+			<button>Ajouter une photo</button>
+		</div>
 	</div>
 	<div class="modalAjout">
 		<div class="nouvellePhoto"></div>
@@ -38,7 +40,7 @@
 			<div class="containerAddPhoto">
 				<i class="fa-regular fa-image"></i>
 				<label for="file" class="labelFile">+ Ajouter photo</label>
-				<p>jpg,png : 4mo max</p>
+				<p>jpg.png : 4mo max</p>
 				<input type="file" name="image" id="file" accept="image/jpg, image/png" required>
 				<img id="previewImage" src="#" alt="Aperçu de l'image">
 			</div>
@@ -88,6 +90,7 @@
 	<section id="portfolio">
 		<div class="titrebouton">
 			<h2>Mes Projets</h2>
+			
 			<button class="button_modal"><i class="fa-regular fa-pen-to-square"></i>modifier</button>
 		</div>
 
