--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -49,7 +49,7 @@
 			<label for="categoryInput">Catégorie</label>
 			<select id="categoryInput" name="category" required></select>
 			<div class="container-button-add-work">
-				<button type="submit" class="button-add-work">Valider</button>
+				<button type="submit" class="button-add-work" disabled>Valider</button>
 			</div>
 		</form>
 	</div>
